# jira-cli

./: .gitignore  DSP-237.json  GSD-73.json  LICENSE  README.md  README.rst  fields.json  pyproject.toml  relabel.py  requirements-dev.txt  requirements.txt  setup.py
docs/: NOTES.md  RESOURCES.md  UPGRADE_POETRY.md  USAGE.md
jira/: cli.py  client.py
jira/api/: field_client.py  issue_client.py  issuetype_client.py  jira_client.py  misc_client.py  option_client.py  page_client.py  project_client.py  screen_client.py  servicedesk_client.py  setting_client.py
jira/cmd/: field.py  issue.py  issuetype.py  option.py  page.py  project.py  role.py  screen.py  server.py  servicedesk.py  setting.py  space.py  task.py
jira/commands/: __init__.py  base.py  field.py  issue.py  issues.py  issuetype.py  option.py  page.py  project.py  role.py  screen.py  server.py  servicedesk.py  session.py  settings.py  space.py  task.py
options/: application_options.json  classeDemande_options.json  classeService_options.json  count_options.py  department_options.json  impact_options.json  incident_options.json  options_count.txt  origin_options.json  produit_options.json  server_options.json  service_options.json  sousProduit_options.json  timenet_options.json  typeIncident_options.json  urgency_options.json
tests/: test_cli.py
tests/commands/: test_login.py
