[tool.poetry]
name = "jira"
version = "2.0.0"
description = "JIRA and Confluence client utilities"
authors = ["lmaitresym <ludovic.maitre@symphony.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
httpx = "^0.28.0"
typer = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jira-cli = "jira.client:app"
